[package]
name = "god"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

storage = { path = "./storage" }
tray = { path = "./tray" }
input-watcher = { path = "./input-watcher" }

[workspace]
members = ["tray", "storage", "input-watcher"]
resolver = "2"
