[package]
name = "god"
version = "0.1.0"
edition = "2021"

[dependencies]
inputbot = "0.6.0"
webbrowser = "0.8.12"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4.31"
dirs = "5.0.1"
systray = "0.4.0"

[profile.release]
# lto = true
# opt-level = "z"
# codegen-units = 1
# panic = "abort"
# strip = true      # 自动从二进制中剥离符号
